crates/sdk/tests/macros/error_const_generic.stderr
error: (calimero)> generic types are not supported
  --> tests/macros/error_const_generic.rs:10:19
   |
10 |     pub fn method<const N: usize>(&self, arr: [u8; N]) -> usize {
   |                   ^^^^^

error[E0277]: (calimero)> no method named `#[app::init]` found for type `MyState`
 --> tests/macros/error_const_generic.rs:6:8
  |
6 | struct MyState;
  |        ^^^^^^^ add an `#[app::init]` method to this type
  |
  = help: the trait `AppStateInit` is not implemented for `MyState`
note: required by a bound in `AppState`
 --> src/state.rs
  |
  | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
  |                                                         ^^^^^^^^^^^^ required by this bound in `AppState`
